Fixed Spacing Issues, Added Like Search, Switched Position of Search Bar

--- a/src/App.css
+++ b/src/App.css
@@ -109,3 +109,9 @@ a {
 .p-button.p-button-sm .p-button-icon {
   font-size: 1rem !important;
 }
+
+.p-datatable-scrollable .p-datatable-thead > tr > th,
+.p-datatable-scrollable .p-datatable-tbody > tr > td,
+.p-datatable-scrollable .p-datatable-tfoot > tr > td {
+  flex: none !important;
+}
